# bazel-cypress-demo

./: .bazeliskrc  .gitignore  BUILD.bazel  README.md  WORKSPACE.bazel  package-lock.json  package.json
.github/workflows/: build.yaml
src/app1/: BUILD.bazel  index.js
src/app2/: index.js
